--- a/.direnv/nix-profile-25.11-rcsmdj802sk3w9l8.rc
+++ b/.direnv/nix-profile-25.11-rcsmdj802sk3w9l8.rc
@@ -15,7 +15,7 @@ export CONFIG_SHELL
 CXX='g++'
 export CXX
 HOSTTYPE='x86_64'
-HOST_PATH='/nix/store/3fs78lb9r34y30rpq9n1k12vff6plbaa-arduino-cli-1.3.1/bin:/nix/store/00bc157nm93q5fjz551fwk60ihlbilvj-coreutils-9.7/bin:/nix/store/wq1cxh4s8rz8vs4ssp2z49v96m0nhxhj-findutils-4.10.0/bin:/nix/store/c7qlkpbivy2znqxd25prgh9pwjxdri6w-diffutils-3.12/bin:/nix/store/7zy6jnnpqh16b18j6ar289vhwp17msh0-gnused-4.9/bin:/nix/store/6q57mnfak3q8ss656qgp245qzqvnniyr-gnugrep-3.12/bin:/nix/store/swbmnc2s8g2zxzxh62hx1vbbcg6i2r5b-gawk-5.3.2/bin:/nix/store/n09s57l86zxyjydkxagawxpkhh3d3dlh-gnutar-1.35/bin:/nix/store/wd4i398mh329vhw93mvmamw3hrnhl257-gzip-1.14/bin:/nix/store/xnd0ld68fzj1g1qr19gg0va486snwj22-bzip2-1.0.8-bin/bin:/nix/store/lmn1m0giq5bkgdqvdpiryb9a2ly28w6g-gnumake-4.4.1/bin:/nix/store/cl2gkgnh26mmpka81pc2g5bzjfrili92-bash-5.3p3/bin:/nix/store/r9lif1a0naanr8kdapwnbnr39lr7d56a-patch-2.8/bin:/nix/store/77jyjqy2b9l2a0139im9ds28zkdv0ybc-xz-5.8.1-bin/bin:/nix/store/5qm0vivgc7lmiyfbf5d5a55s40d996bd-file-5.45/bin'
+HOST_PATH='/nix/store/3fs78lb9r34y30rpq9n1k12vff6plbaa-arduino-cli-1.3.1/bin:/nix/store/xnmjcajs52a5s6nk10nb1zjp8rrbzams-arduino-1.8.19/bin:/nix/store/00bc157nm93q5fjz551fwk60ihlbilvj-coreutils-9.7/bin:/nix/store/wq1cxh4s8rz8vs4ssp2z49v96m0nhxhj-findutils-4.10.0/bin:/nix/store/c7qlkpbivy2znqxd25prgh9pwjxdri6w-diffutils-3.12/bin:/nix/store/7zy6jnnpqh16b18j6ar289vhwp17msh0-gnused-4.9/bin:/nix/store/6q57mnfak3q8ss656qgp245qzqvnniyr-gnugrep-3.12/bin:/nix/store/swbmnc2s8g2zxzxh62hx1vbbcg6i2r5b-gawk-5.3.2/bin:/nix/store/n09s57l86zxyjydkxagawxpkhh3d3dlh-gnutar-1.35/bin:/nix/store/wd4i398mh329vhw93mvmamw3hrnhl257-gzip-1.14/bin:/nix/store/xnd0ld68fzj1g1qr19gg0va486snwj22-bzip2-1.0.8-bin/bin:/nix/store/lmn1m0giq5bkgdqvdpiryb9a2ly28w6g-gnumake-4.4.1/bin:/nix/store/cl2gkgnh26mmpka81pc2g5bzjfrili92-bash-5.3p3/bin:/nix/store/r9lif1a0naanr8kdapwnbnr39lr7d56a-patch-2.8/bin:/nix/store/77jyjqy2b9l2a0139im9ds28zkdv0ybc-xz-5.8.1-bin/bin:/nix/store/5qm0vivgc7lmiyfbf5d5a55s40d996bd-file-5.45/bin'
 export HOST_PATH
 IFS=' 	
 '
@@ -35,7 +35,7 @@ NIX_CC='/nix/store/dmypp1h4ldn0vfk3fi6yfyf5yxp9yz0k-gcc-wrapper-14.3.0'
 export NIX_CC
 NIX_CC_WRAPPER_TARGET_HOST_x86_64_unknown_linux_gnu='1'
 export NIX_CC_WRAPPER_TARGET_HOST_x86_64_unknown_linux_gnu
-NIX_CFLAGS_COMPILE=' -frandom-seed=ph8lzqj5i1'
+NIX_CFLAGS_COMPILE=' -frandom-seed=n39yfcbkjp'
 export NIX_CFLAGS_COMPILE
 NIX_ENFORCE_NO_NATIVE='1'
 export NIX_ENFORCE_NO_NATIVE
@@ -56,7 +56,7 @@ OLDPWD=''
 export OLDPWD
 OPTERR='1'
 OSTYPE='linux-gnu'
-PATH='/nix/store/0032synbfqd0ylgf9szgp724nmw2fq89-patchelf-0.15.2/bin:/nix/store/dmypp1h4ldn0vfk3fi6yfyf5yxp9yz0k-gcc-wrapper-14.3.0/bin:/nix/store/k6gpflj398qaxzx4bmqhnnj4l328vabk-gcc-14.3.0/bin:/nix/store/gf1xp3sizlc0nkq3man8ys0mwhs1bp44-glibc-2.40-66-bin/bin:/nix/store/00bc157nm93q5fjz551fwk60ihlbilvj-coreutils-9.7/bin:/nix/store/0fq1mnfqjl9ain4jg5j56kl6h8bbmy1h-binutils-wrapper-2.44/bin:/nix/store/7h3qnwgvkw6z2r8lq4j5mks4l6r5x2cq-binutils-2.44/bin:/nix/store/3fs78lb9r34y30rpq9n1k12vff6plbaa-arduino-cli-1.3.1/bin:/nix/store/00bc157nm93q5fjz551fwk60ihlbilvj-coreutils-9.7/bin:/nix/store/wq1cxh4s8rz8vs4ssp2z49v96m0nhxhj-findutils-4.10.0/bin:/nix/store/c7qlkpbivy2znqxd25prgh9pwjxdri6w-diffutils-3.12/bin:/nix/store/7zy6jnnpqh16b18j6ar289vhwp17msh0-gnused-4.9/bin:/nix/store/6q57mnfak3q8ss656qgp245qzqvnniyr-gnugrep-3.12/bin:/nix/store/swbmnc2s8g2zxzxh62hx1vbbcg6i2r5b-gawk-5.3.2/bin:/nix/store/n09s57l86zxyjydkxagawxpkhh3d3dlh-gnutar-1.35/bin:/nix/store/wd4i398mh329vhw93mvmamw3hrnhl257-gzip-1.14/bin:/nix/store/xnd0ld68fzj1g1qr19gg0va486snwj22-bzip2-1.0.8-bin/bin:/nix/store/lmn1m0giq5bkgdqvdpiryb9a2ly28w6g-gnumake-4.4.1/bin:/nix/store/cl2gkgnh26mmpka81pc2g5bzjfrili92-bash-5.3p3/bin:/nix/store/r9lif1a0naanr8kdapwnbnr39lr7d56a-patch-2.8/bin:/nix/store/77jyjqy2b9l2a0139im9ds28zkdv0ybc-xz-5.8.1-bin/bin:/nix/store/5qm0vivgc7lmiyfbf5d5a55s40d996bd-file-5.45/bin'
+PATH='/nix/store/0032synbfqd0ylgf9szgp724nmw2fq89-patchelf-0.15.2/bin:/nix/store/dmypp1h4ldn0vfk3fi6yfyf5yxp9yz0k-gcc-wrapper-14.3.0/bin:/nix/store/k6gpflj398qaxzx4bmqhnnj4l328vabk-gcc-14.3.0/bin:/nix/store/gf1xp3sizlc0nkq3man8ys0mwhs1bp44-glibc-2.40-66-bin/bin:/nix/store/00bc157nm93q5fjz551fwk60ihlbilvj-coreutils-9.7/bin:/nix/store/0fq1mnfqjl9ain4jg5j56kl6h8bbmy1h-binutils-wrapper-2.44/bin:/nix/store/7h3qnwgvkw6z2r8lq4j5mks4l6r5x2cq-binutils-2.44/bin:/nix/store/3fs78lb9r34y30rpq9n1k12vff6plbaa-arduino-cli-1.3.1/bin:/nix/store/xnmjcajs52a5s6nk10nb1zjp8rrbzams-arduino-1.8.19/bin:/nix/store/00bc157nm93q5fjz551fwk60ihlbilvj-coreutils-9.7/bin:/nix/store/wq1cxh4s8rz8vs4ssp2z49v96m0nhxhj-findutils-4.10.0/bin:/nix/store/c7qlkpbivy2znqxd25prgh9pwjxdri6w-diffutils-3.12/bin:/nix/store/7zy6jnnpqh16b18j6ar289vhwp17msh0-gnused-4.9/bin:/nix/store/6q57mnfak3q8ss656qgp245qzqvnniyr-gnugrep-3.12/bin:/nix/store/swbmnc2s8g2zxzxh62hx1vbbcg6i2r5b-gawk-5.3.2/bin:/nix/store/n09s57l86zxyjydkxagawxpkhh3d3dlh-gnutar-1.35/bin:/nix/store/wd4i398mh329vhw93mvmamw3hrnhl257-gzip-1.14/bin:/nix/store/xnd0ld68fzj1g1qr19gg0va486snwj22-bzip2-1.0.8-bin/bin:/nix/store/lmn1m0giq5bkgdqvdpiryb9a2ly28w6g-gnumake-4.4.1/bin:/nix/store/cl2gkgnh26mmpka81pc2g5bzjfrili92-bash-5.3p3/bin:/nix/store/r9lif1a0naanr8kdapwnbnr39lr7d56a-patch-2.8/bin:/nix/store/77jyjqy2b9l2a0139im9ds28zkdv0ybc-xz-5.8.1-bin/bin:/nix/store/5qm0vivgc7lmiyfbf5d5a55s40d996bd-file-5.45/bin'
 export PATH
 PS4='+ '
 RANLIB='ranlib'
@@ -78,7 +78,7 @@ export XDG_DATA_DIRS
 __structuredAttrs=''
 export __structuredAttrs
 _substituteStream_has_warned_replace_deprecation='false'
-buildInputs='/nix/store/3fs78lb9r34y30rpq9n1k12vff6plbaa-arduino-cli-1.3.1'
+buildInputs='/nix/store/3fs78lb9r34y30rpq9n1k12vff6plbaa-arduino-cli-1.3.1 /nix/store/xnmjcajs52a5s6nk10nb1zjp8rrbzams-arduino-1.8.19'
 export buildInputs
 buildPhase='{ echo "------------------------------------------------------------";
   echo " WARNING: the existence of this path is not guaranteed.";
@@ -156,7 +156,7 @@ declare -a pkgsBuildBuild=()
 declare -a pkgsBuildHost=('/nix/store/0032synbfqd0ylgf9szgp724nmw2fq89-patchelf-0.15.2' '/nix/store/ka03rs4a3bybjhqpvg388sdszbybvbff-update-autotools-gnu-config-scripts-hook' '/nix/store/0y5xmdb7qfvimjwbq7ibg1xdgkgjwqng-no-broken-symlinks.sh' '/nix/store/cv1d7p48379km6a85h4zp6kr86brh32q-audit-tmpdir.sh' '/nix/store/85clx3b0xkdf58jn161iy80y5223ilbi-compress-man-pages.sh' '/nix/store/wgrbkkaldkrlrni33ccvm3b6vbxzb656-make-symlinks-relative.sh' '/nix/store/5yzw0vhkyszf2d179m0qfkgxmp5wjjx4-move-docs.sh' '/nix/store/fyaryjvghbkpfnsyw97hb3lyb37s1pd6-move-lib64.sh' '/nix/store/kd4xwxjpjxi71jkm6ka0np72if9rm3y0-move-sbin.sh' '/nix/store/pag6l61paj1dc9sv15l7bm5c17xn5kyk-move-systemd-user-units.sh' '/nix/store/cmzya9irvxzlkh7lfy6i82gbp0saxqj3-multiple-outputs.sh' '/nix/store/x8c40nfigps493a07sdr2pm5s9j1cdc0-patch-shebangs.sh' '/nix/store/cickvswrvann041nqxb0rxilc46svw1n-prune-libtool-files.sh' '/nix/store/xyff06pkhki3qy1ls77w10s0v79c9il0-reproducible-builds.sh' '/nix/store/z7k98578dfzi6l3hsvbivzm7hfqlk0zc-set-source-date-epoch-to-latest.sh' '/nix/store/pilsssjjdxvdphlg2h19p0bfx5q0jzkn-strip.sh' '/nix/store/dmypp1h4ldn0vfk3fi6yfyf5yxp9yz0k-gcc-wrapper-14.3.0' '/nix/store/0fq1mnfqjl9ain4jg5j56kl6h8bbmy1h-binutils-wrapper-2.44' )
 declare -a pkgsBuildTarget=()
 declare -a pkgsHostHost=()
-declare -a pkgsHostTarget=('/nix/store/3fs78lb9r34y30rpq9n1k12vff6plbaa-arduino-cli-1.3.1' )
+declare -a pkgsHostTarget=('/nix/store/3fs78lb9r34y30rpq9n1k12vff6plbaa-arduino-cli-1.3.1' '/nix/store/xnmjcajs52a5s6nk10nb1zjp8rrbzams-arduino-1.8.19' )
 declare -a pkgsTargetTarget=()
 declare -a postFixupHooks=('noBrokenSymlinksInAllOutputs' '_makeSymlinksRelativeInAllOutputs' '_multioutPropagateDev' )
 declare -a postUnpackHooks=('_updateSourceDateEpochFromSourceRoot' )
